--- a/config.env
+++ b/config.env
@@ -4,3 +4,4 @@ PORT=8000
 URL=127.0.0.2
 DATABASE=mongodb+srv://jamshid:<password>@startmagic.vevoy.mongodb.net/magic?retryWrites=true&w=majority
 DATABASE_PASSWORD=jam0705
+NODE_ENV=PRODUCTION
