--- a/config.env
+++ b/config.env
@@ -5,3 +5,5 @@ URL=127.0.0.2
 DATABASE=mongodb+srv://jamshid:<password>@startmagic.vevoy.mongodb.net/magic?retryWrites=true&w=majority
 DATABASE_PASSWORD=jam0705
 NODE_ENV=PRODUCTION
+JWT_SECRET=jamshidxatamov07052000jamshidxatamov07052000
+JWT_EXPIRES_IN=1d
