mail.js add project

--- a/config.env
+++ b/config.env
@@ -7,3 +7,9 @@ DATABASE_PASSWORD=jam0705
 NODE_ENV=PRODUCTION
 JWT_SECRET=jamshidxatamov07052000jamshidxatamov07052000
 JWT_EXPIRES_IN=1d
+
+
+EMAIL_HOST=smtp.gmail.com
+EMAIL_PORT=465
+EMAIL_USER=jamshidxatamov0705@gmail.com
+EMAIL_PASS=jccmnydzkmobuzdi
