--- a/package.json
+++ b/package.json
@@ -11,13 +11,18 @@
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.0.1",
+    "body-parser": "^1.20.0",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
+    "express-mongo-sanitize": "^2.2.0",
     "express-rate-limit": "^6.4.0",
+    "helmet": "^5.1.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.3.8",
     "nodemailer": "^6.7.6",
     "nodemon": "^2.0.16",
-    "validator": "^13.7.0"
+    "restify": "^8.6.1",
+    "validator": "^13.7.0",
+    "xss-clean": "^0.1.1"
   }
 }
